<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlack">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:background="@color/colorWhite"
        android:textSize="30dp"/>
    <RadioGroup
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radiogroup"
        android:orientation="vertical">
        <RadioButton
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/A"
            android:id="@+id/A"
            android:textColor="@color/colorWhite"
            android:checked="true"
            android:textSize="25dp"/>
        <RadioButton
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B"
            android:id="@+id/B"
            android:textColor="@color/colorWhite"
            android:textSize="25dp"/>
        <RadioButton
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/C"
            android:id="@+id/C"
            android:textColor="@color/colorWhite"
            android:textSize="25dp"/>
        <RadioButton
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/D"
            android:id="@+id/D"
            android:textColor="@color/colorWhite"
            android:textSize="25dp"/>
    </RadioGroup>
    <LinearLayout
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sure"
            android:text="@string/sure"/>
        <Button
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:text="@string/cancel"/>
    </LinearLayout>

</LinearLayout>
